WWETT show and misc location and dealer updates

--- a/loc-nl.html
+++ b/loc-nl.html
@@ -52,11 +52,19 @@ contact-nl: yes
         <h3 class="section-heading">Operations and Customer Service</h3>
         <div class="row">
           <div class="col-sm-6">
+            <p><strong>Bob Van Wordragen</strong><br/>
+              Operations Manager<br/>
+              Office: +31 8590 27370<br/>
+            <a href="mailto:Bob.VanWordragen@stoneagetools.com">bob.vanwordragen@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
             <p><strong>Sander de Korte</strong><br/>
               Customer Service Manager<br/>
               Office: +31 8590 27370<br/>
             <a href="mailto:sander.dekorte@stoneagetools.com">sander.dekorte@stoneagetools.com</a></p>
           </div>
+        </div>
+        <div class="row">
           <div class="col-sm-6">
             <p><strong>Sigo Waardenburg</strong><br/>
               Service and Rental Technician<br/>
