--- a/manuals.html
+++ b/manuals.html
@@ -314,17 +314,9 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/gopher">GO-MP9</a></td>
-                <td>GOPHER<br>22k tube/pipe cleaning nozzle</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/GO-MP9_Manual.pdf" target="_blank" class="btn btn-sm">PL 511</a><br><small class="grey">Updated: 2012</small></td>
-                <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/GO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/gopher">GO-H9-C</a></td>
-                <td>GOPHER<br>40k tube/pipe cleaning nozzle</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/GO-H9-C_Manual.pdf" target="_blank" class="btn btn-sm">PL 510</a><br><small class="grey">Updated: 03/2017</small></td>
+                <td><a href="/gopher">GO-MP9, GO-H9-C</a></td>
+                <td>GOPHER<br>22k &amp; 40k tube/pipe cleaning nozzle</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/GO_Manual.pdf" target="_blank" class="btn btn-sm">PL 674</a><br><small class="grey">Updated: 01/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/GO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
                 <td class="text-center"></td>
@@ -389,7 +381,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/raptor">RPT</a></td>
                 <td>RAPTOR<br>Pipe cleaning nozzle models: RPT-P8, RPT-MP9, RPT-M24</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/RPT_Manual.pdf" target="_blank" class="btn btn-sm">PL 543</a><br><small class="grey">Updated: 03/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/RPT_Manual.pdf" target="_blank" class="btn btn-sm">PL 543</a><br><small class="grey">Updated: 01/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/RPT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 07/2017</small></td>
                 <td class="text-center"></td>
