--- a/rentals.html
+++ b/rentals.html
@@ -41,19 +41,19 @@ master-slider: yes
     </div>
     <div class="row">
       <div class="col-sm-4">
+        <h5 class="bold slab" style="text-transform:uppercase;">Netherlands</h5>
+        <p><strong>StoneAge Netherlands</strong><br>
+          Rotterdam, NL<br>
+          +31 8590 27370<br>
+        <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-4">
         <h5 class="bold slab" style="text-transform:uppercase;">Australia</h5>
         <p><strong>WOMA Australia</strong><br>
           +61 08 9434 6622 | Henderson, Perth, WA<br>
           +61 02 4648 2311 | Smeaton Grange, NSW<br>
           +61 07 5479 3112 | Queensland<br>
         <a href="http://www.woma.com.au/" target="_blank">www.woma.com.au</a></p>
-      </div>
-      <div class="col-sm-4">
-        <h5 class="bold slab" style="text-transform:uppercase;">Canada</h5>
-        <p><strong>Joe Johnson Equipment</strong><br>
-          1 (800) 263-1262 | Edmonton, AB<br>
-          1 (800) 263-1262 | Innisfil, ON<br>
-        <a href="http://www.jjei.com/" target="_blank">www.jjei.com</a></p>
       </div>
     </div>
   </div>
@@ -103,6 +103,7 @@ master-slider: yes
               <div class="panel-body">
                 <p><strong>Please contact your local StoneAge rental facility to discuss the specific requirements of your job.</strong></p>
                 <p>Our experienced staff can recommend the best tools based on your application and make sure you have everything you need to run your job, including hoses, adapters and fittings.</p>
+<!--
                 <h3>StoneAge Rental Locations</h3>
                 <div class="row">
                   <div class="col-sm-4">
@@ -129,20 +130,22 @@ master-slider: yes
                 </div>
                 <div class="row">
                   <div class="col-sm-4">
-                    <h5 class="bold slab">Canada</h5>
-                    <p><strong>Joe Johnson Equipment</strong><br>
-                    Edmonton, AB<br>
-                    +1 (780) 469-1584<br>
-                    <a href="http://www.jjei.com">www.jjei.com</a></p>
+                    <h5 class="bold slab">Netherlands</h5>
+                    <p><strong>StoneAge Netherlands</strong><br>
+                      Rotterdam, NL<br>
+                      +31 8590 27370<br>
+                    <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a></p>
                   </div>
-                  <div class="col-sm-4">
-                    <h5 class="bold slab">&nbsp;</h5>
-                    <p><strong>Joe Johnson Equipment</strong><br>
-                    Innisfil, ON<br>
-                    +1 (705) 733-7700<br>
-                    <a href="http://www.jjei.com">www.jjei.com</a></p>
+                  <div class="col-sm-8">
+                    <h5 class="bold slab">Australia</h5>
+                    <p><strong>WOMA Australia</strong><br>
+                      +61 08 9434 6622 | Henderson, Perth, WA<br>
+                      +61 02 4648 2311 | Smeaton Grange, NSW<br>
+                      +61 07 5479 3112 | Queensland<br>
+                    <a href="http://www.woma.com.au/" target="_blank">www.woma.com.au</a></p>
                   </div>
                 </div>
+-->
                 <h3>Required Documents</h3>
                 <p>In order to rent equipment you’ll need to <a href="/assets/pdf/reference/StoneAge_Credit_Application.pdf" target="_blank">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to meet the <a href="/assets/pdf/reference/StoneAge_Customer_Insurance_Requirements.pdf" target="_blank">StoneAge customer insurance requirements</a>.</p>
               </div>
