--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -265,8 +265,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/GO-MP9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k Gopher GO-MP9 Manual</a></li>
-                <li><a href="/assets/pdf/manuals/GO-H9-C_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Gopher GO-H9-C Manual</a></li>
+                <li><a href="/assets/pdf/manuals/GO_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Gopher Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
