stoneage solutions name change

--- a/custom-waterblast-solutions.html
+++ b/custom-waterblast-solutions.html
@@ -3,7 +3,7 @@ layout: default
 page-type: page
 title: Custom Engineered Waterblast Equipment Solutions 
 excerpt: Custom engineered waterblasting solutions for your most challening jobs.
-permalink: /custom-solutions
+permalink: /solutions
 ---
 
 <div class="fluid-container landing-nav">
