--- a/loc-nl.html
+++ b/loc-nl.html
@@ -44,9 +44,8 @@ contact-nl: yes
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
-          <h2>NOW OPEN FOR BUSINESS! Grand Opening 1 October 2018</h2>
-          <p style="font-size:120%;">StoneAge Netherlands is a full-service facility offering equipment sales, rentals, repairs, training, and support.</p>
-          <p style="font-size:120%;">StoneAge Netherlands' primary service area includes the Benelux region, Austria, and Germany. International service inquiries can also be facilitated by <a href="/europe">StoneAge Europe, UK.</a></p>       
+          <p>StoneAge Netherlands is a full-service facility offering equipment sales, rentals, repairs, training, and support. Our primary service area includes the Benelux region, Austria, and Germany. International service inquiries can also be facilitated by <a href="/europe">StoneAge Europe, UK.</a></p>
+          <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us or <a href="/rentals">click here for information.</a></p>
         </div>
 
         <h3 class="section-heading">Operations and Customer Service</h3>
