StoneAge Training, terms, and misc

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -17,6 +17,9 @@
 <div id="featured-vid-ligori-01">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/y6JE-oOlRMU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="training-overview-01">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/d-diB65scQU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="ap-surface-vid">
