--- a/contact.html
+++ b/contact.html
@@ -98,9 +98,9 @@ contact-main: yes
               <p>Randolph Briggs | +971 5 6832 7196<br/>
                 <a href="mailto:Randolph.Briggs@stoneagetools.com">randolph.briggs@stoneagetools.com</a>
               </p>
-              <h3>Canada - East</h3>
-              <p>Sean Baker | +1 (440) 661-0022<br/>
-                <a href="mailto:Sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a>
+              <h3>Canada</h3>
+              <p>Carrie Grant | +1 (970) 403-1432<br/>
+                <a href="mailto:carrie.grant@stoneagetools.com">carrie.grant@stoneagetools.com</a>
               </p>
               <h3>Central America</h3>
               <p>Alan Charles | +1 (720) 219-0777<br/>
@@ -118,10 +118,6 @@ contact-main: yes
               <p>Jean-Baptiste Ternoy<br/>+44 (0)1684 892065<br/>
                 <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a>
               </p>
-              <h3>Europe - France</h3>
-              <p>Alain Dessonnaz<br/>+33 755 60 00 20<br/>
-                <a href="mailto:Alain.Dessonnaz@stoneagetools.com">alain.dessonnaz@stoneagetools.com</a>
-              </p>
               <h3>Europe - Germany</h3>
               <p>Lukasz Wawrzyniak<br/>+49 (0)151 16805010<br/>
                 <a href="mailto:Lukasz.Wawrzyniak@stoneagetools.com">lukasz.wawrzyniak@stoneagetools.com</a>
@@ -129,6 +125,10 @@ contact-main: yes
               <h3>Europe - UK</h3>
               <p>Andrew Birt | +44 7788 926261<br/>
                 <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@stoneagetools.com</a>
+              </p>
+              <h3>Europe - Warthog</h3>
+              <p>Alain Dessonnaz | +33 755 60 00 20<br/>
+                <a href="mailto:Alain.Dessonnaz@stoneagetools.com">alain.dessonnaz@stoneagetools.com</a>
               </p>
               <h3>Middle East</h3>
               <p>Randolph Briggs | +971 5 6832 7196<br/>
@@ -150,30 +150,30 @@ contact-main: yes
               <p>Randolph Briggs | +971 5 6832 7196<br/>
                 <a href="mailto:Randolph.Briggs@stoneagetools.com">randolph.briggs@stoneagetools.com</a>
               </p>
-              <h3>USA - Central</h3>
-              <p>Bill O'Briant | +1 (713) 373-1248<br/>
-                <a href="mailto:bill.obriant@stoneagetools.com">bill.obriant@stoneagetools.com</a>
-              </p>
-              <h3>USA - Midwest</h3>
-              <p>Sean Baker | +1 (440) 661-0022<br/>
-                <a href="mailto:Sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a>
-              </p>
-              <h3>USA - Southeast</h3>
-              <p>Bradley Coble | +1 (409) 239-9165<br/>
-                <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a>
-              </p>
-              <h3>USA - Warthog</h3>
-              <p>Anne Brennan | +1 (970) 426-4243<br/>
-                <a href="mailto:anne.brennan@stoneagetools.com">anne.brennan@stoneagetools.com</a>
-              </p>
-              <h3>USA - Warthog</h3>
-              <p>Frank Ligori | +1 (815) 674-9253<br/>
-                <a href="mailto:frank.ligori@stoneagetools.com">frank.ligori@stoneagetools.com</a>
-              </p>
-              <h3>USA - West Coast</h3>
+              <h3>USA - Central &amp; West</h3>
               <p>Mike Johnson | +1 (970) 769-1448<br/>
                 <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a>
               </p>
+               <h3>USA - Northeast</h3>
+               <p>Mike Taylor | +1 (419) 690-2267<br/>
+                 <a href="mailto:mike.taylor@stoneagetools.com">mike.taylor@stoneagetools.com</a>
+               </p>
+               <h3>USA - Southeast</h3>
+               <p>Sean Baker | +1 (440) 661-0022<br/>
+                 <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a>
+               </p>
+               <h3>USA - Texas</h3>
+               <p>Bradley Coble | +1 (409) 239-9165<br/>
+                 <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a>
+               </p>
+               <h3>USA - Warthog</h3>
+               <p>Anne Brennan | +1 (970) 426-4243<br/>
+                 <a href="mailto:anne.brennan@stoneagetools.com">anne.brennan@stoneagetools.com</a>
+               </p>
+               <h3>USA - Warthog</h3>
+               <p>Frank Ligori | +1 (815) 674-9253<br/>
+                 <a href="mailto:frank.ligori@stoneagetools.com">frank.ligori@stoneagetools.com</a>
+               </p>
             </div>
           </div>
           <!-- Social Share
