--- a/loc-europe.html
+++ b/loc-europe.html
@@ -100,7 +100,7 @@ contact-uk: yes
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Alain Dessonnaz</strong>
-            <br/>Sales Manager France<br/>
+            <br/>Warthog Manager Europe<br/>
               Office: +44 (0) 1684 892065<br/>
               Mobile: +33 755 60 00 20<br />
               <a href="mailto:Alain.Dessonnaz@stoneagetools.com">alain.dessonnaz@stoneagetools.com</a></p>
