--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -338,14 +338,14 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>WGR 187</strong> HP Seal Puller Pin</li>
-                            <li>1 x <strong>WGR 181</strong> Removal Press Tube</li>
-                            <li>1 x <strong>WGR 183</strong> Hex Tool</li>
-                            <li>1 x <strong>BA 481</strong> Bearing Removal Tool</li>
-                            <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
-                            <li>1 x <strong>WGR 182</strong> Installation Press Tube</li>
-                            <li>1 x <strong>WGR 184</strong> HP Seal Install Tool</li>
+                            <li>1 x <strong>BA 481</strong> Tool, Bearing Removal</li>
+                            <li>1 x <strong>WGR 180</strong> Magnum Shaft Lock PIn w/Ring</li>
                             <li>1 x <strong>WGR 186</strong> HP Seal Puller</li>
+                            <li>1 x <strong>WHR 181</strong> Tool, Removal Press Tube</li>
+                            <li>1 x <strong>WHR 182</strong> Tool, Installation Press Tube</li>
+                            <li>1 x <strong>WHR 183</strong> Tool, Hex</li>
+                            <li>1 x <strong>WGR 184</strong> Tool, HP Seal Installer</li>
+                            <li>1 x <strong>WHR 187</strong> Tool, HP Seal Puller Pin</li>
                           </ul>
                         </div>
                       </div>
