additional Training updates, new obsolescence batch, misc

--- a/manuals.html
+++ b/manuals.html
@@ -236,7 +236,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJV-H9</a></td>
                 <td>40K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank" class="btn btn-sm">PL 519</a><br><small class="grey">Updated: 02/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank" class="btn btn-sm">PL 519</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
                 <td class="text-center"></td>
@@ -293,14 +293,6 @@ permalink: /manuals
                 <td><a href="/cst-air">CST-AIR-P12</a></td>
                 <td>CABLE SWIVEL TOOL<br>Cable-guided furnace/boiler cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/CST_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
-                <td class="text-center"></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/floor-cleaner">FC-SG, FC-SV</a></td>
-                <td>FLOOR CLEANER<br>Walk-behind surface cleaning and preparation</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/FCSG_FCSV_Manual.pdf" target="_blank" class="btn btn-sm">PL 540</a><br><small class="grey">Updated: 03/2016</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -439,7 +431,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling models: SG-P8P8, SG-P12P12-62, SG-P12K-62, <br>SG-MP12AV12,SG-MP12K-62, SG-MP16MP16-62, SG-MP16K-62</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">PL 518</a><br><small class="grey">Updated: 07/2018</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -463,7 +455,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling models: SG-CCN-P12K, SG-CCN-MP12K, SG-CRS-MP12K</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SG-CCN_Manual.pdf" target="_blank" class="btn btn-sm">PL 535</a><br><small class="grey">Updated: 07/2018</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -479,7 +471,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling model: SH-P8P8</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SH_Manual.pdf" target="_blank" class="btn btn-sm">PL 521</a><br><small class="grey">Updated: 05/2017</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -487,7 +479,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling models: SL-P8P4, SL-MP9AV9, SL-MP9MP9R-L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SL_Manual.pdf" target="_blank" class="btn btn-sm">PL 525</a><br><small class="grey">Updated: 03/2017</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -495,7 +487,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling models: SM-P16, SM-P20, SM-P16G, SM-P16L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SM_Manual.pdf" target="_blank" class="btn btn-sm">PL 524</a><br><small class="grey">Updated: 04/2017</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -551,7 +543,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling models: UH-H9H6, UH-H9G12</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/UH_Manual.pdf" target="_blank" class="btn btn-sm">PL 523</a><br><small class="grey">Updated: 04/2017</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -567,7 +559,7 @@ permalink: /manuals
                 <td>SWIVELS<br>Rotary coupling models: UHS-H9H9, UHS-H9H9-L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/UHS_Manual.pdf" target="_blank" class="btn btn-sm">PL 541</a><br><small class="grey">Updated: 04/2017</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -742,10 +734,16 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BHK.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
+                <td>BJ 360</td>
+                <td>Backout Preventer (roller style)</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BJ-360.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>BNS</td>
                 <td>Shrouded Banshee</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/bns13_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BNS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BNS13.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BRLM</td>
@@ -758,6 +756,12 @@ permalink: /manuals
                 <td>Slotted rail tractor drive</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BUD_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BUD.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>CAT</td>
+                <td>Cleaning Apparatus</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_CAT-100.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>CDA</td>
@@ -778,6 +782,18 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_FC.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
+                <td>EB</td>
+                <td>Extension Boom</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_EB-100.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>FCSG</td>
+                <td>Floor cleaners</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/FCSG_FCSV_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_FCSG.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>FCT-JS</td>
                 <td>PAINT GRATE CLEANER<br>High pressure floor cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/FCT-JS_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
@@ -788,6 +804,12 @@ permalink: /manuals
                 <td>FERRET<br>Self-Rotary Tube Nozzle</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/FT_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_FT.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>GH</td>
+                <td>Gear Head Assembly</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_GH.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>HC</td>
@@ -806,6 +828,30 @@ permalink: /manuals
                 <td>High pressure water swivel</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HI_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HI.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>HWB</td>
+                <td>Small Hose Reel</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HWB.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>HRS</td>
+                <td>Powered Hose Reel</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HRS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>JCAM</td>
+                <td>Jetter Camera Sled</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_JCAM.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>JKT</td>
+                <td>Yellow Jacket boiler cleaner</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_JKT.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>MT</td>
@@ -832,10 +878,22 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SA-USA.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
+                <td>SBT</td>
+                <td>SABERTOOTH Automated tube lancing system</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SBT.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>SL-H9H9</td>
                 <td>High pressire water swivel</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SL-H9H9_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SL-H9H9.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>SM-300</td>
+                <td>Pendant Tube Cleaner</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SM-300.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>SPF</td>
