--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -126,7 +126,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1 NPT or BSPP</td>
+                  <td colspan="2">1 NPT or BSPP, 1 1/4 NPT or BSPP</td>
                 </tr>
 <!--
                 <tr>
