--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -79,7 +79,7 @@ landing: yes
                 </tr>
                 <tr>
                   <th>Inlet</th>
-                  <td>3/4 NPT or BSPP</td>
+                  <td>1/2 NPT or BSPP,<br>3/4 NPT or BSPP</td>
                 </tr>
               </tbody>
             </table>
