--- a/training.html
+++ b/training.html
@@ -46,11 +46,18 @@ permalink: /training
   <!-- About -->
   <section class="row bg-lt-grey padding-tb-30">
     <div class="container">
-      <div class="col-sm-6">
+      <div class="col-sm-4" style="padding-top:15px;">
+      <!-- Lightbox call -->
+        <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #training-overview">
+          <img src="assets/vid/thumb/training-overview-vid.png" alt="StoneAge Training for industrial cleaning professionals" class="img-responsive" />
+        </a>
+      <!-- End Lightbox call -->
+      </div>
+      <div class="col-sm-4">
         <h2><strong>THE ONLY TRAINING CURRICULUM THAT GOES BEYOND THE BASICS of cleaning</strong></h2>
         <p class="description margin-bottom-30 grey">We provide in-depth classroom and hands-on practical training, incorporating techniques gathered over 40 years of industry leadership.</p>
       </div>
-      <div class="col-sm-5 col-sm-offset-1">
+      <div class="col-sm-4">
         <ul class="description fa-ul">
           <li><strong>Increase workforce safety, productivity, and retention</strong></li>
           <li><strong>Meet plant safety requirements</strong></li>
@@ -79,7 +86,7 @@ permalink: /training
           <h3><strong>Day 2</strong></h3>
           <img src="/assets/img/abx_3l_002b.jpg" alt="StoneAge ABX-3L tube lancing" class="img-responsive" />
           <p class="description"><strong class="big-130">Waterjetting Science and Technique</strong><br>
-            <span class="grey">This course provides a deeper understanding of the science of waterjetting and how to apply physical concepts to optimal job efficiency. Topics include understanding pump horsepower and pressure loss, fitting and hose identification, material jettability and quality jetting, effects of upstream conditions, rotation, standoff, and dwell time.</span></p>
+            <span class="grey">This course provides a deeper understanding of the science of waterjetting and how to apply physical concepts for optimal job efficiency. Topics include understanding pump horsepower and pressure loss, fitting and hose identification, material jettability and quality jetting, effects of upstream conditions, rotation, standoff, and dwell time.</span></p>
           <p class="description"><strong class="big-130">Hands-on Practical Assessment</strong><br>
             <span class="grey">Enforce what’s been learned with instructor-led exercises and hands-on practice. Training will be enhanced by working with fellow students, problem-solving, and assessment as a team.</span></p>
         </div>
